feat: Add Ble scanning logic
- Added `BleScanManager` interface and its implementation `BleScanManagerImpl` to handle BLE scanning.
- Created data classes `DiscoveredBleDevice` and `BleDevice` to represent discovered devices.
- Added `BleScanResource` sealed class to represent the state of the scan.
- Defined `BleScanError` sealed interface for potential scan errors.
- Introduced `BleDeviceType` enum to categorize BLE devices.
- Added `MacAddress` value class for MAC address validation.
- Included a mapper to convert scan error codes to `BleScanError` instances.
- Created a foreground service `BleForegroundService` for continuous scanning.
- Updated the UI with an icon for Bluetooth scanning.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -62,5 +62,6 @@ coil-mp = { module = "io.coil-kt.coil3:coil", version.ref = "coil3" }
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-parcelable = { id = "org.jetbrains.kotlin.plugin.parcelize" }
 jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
