--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".presentation.service.BleForegroundService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="START_SCAN" />
+                <action android:name="STOP_SCAN" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
