feat: Add client BLE list screen
Added the client BLE list screen with the following features:
- Starts scanning for BLE devices on screen launch.
- Displays discovered BLE devices in a list.
- Updates the list with new devices and RSSI changes.
- Starts a foreground service to continue scanning in the background.
- Navigates to the client BLE detail screen when a device is selected.

Updated the Intro screen to navigate to the client BLE list screen.

Added a new navigation graph for the client screens.

Updated the BleScanManager to handle scanning and device discovery.

Added a new BleDevice data class to represent a discovered BLE device.

Updated the MacAddress data class to be a value class.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
     Needed For: Ensuring scans and connections persist when the app is minimized.  -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
 
     <!--  If Bluetooth is a critical piece of your app, you can add flags to your manifest
     file indicating this requirement. The <uses-feature> element allows you to specify
@@ -40,6 +41,7 @@
     <uses-feature android:name="android.hardware.bluetooth" android:required="false"/>
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="false"/>
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:name=".RSABleApplication"
         android:allowBackup="false"
@@ -64,10 +66,11 @@
         </activity>
 
         <service android:name=".presentation.service.BleForegroundService"
-            android:exported="false">
+            android:exported="false"
+            android:foregroundServiceType="location">
             <intent-filter>
-                <action android:name="START_SCAN" />
-                <action android:name="STOP_SCAN" />
+                <action android:name="dev.kavrin.rsable.START_SCAN" />
+                <action android:name="dev.kavrin.rsable.STOP_SCAN" />
             </intent-filter>
         </service>
     </application>
